solution fo AoC 2024 Day 4: 'Ceres Search' part 1